lab01/vpc.tf
resource "aws_vpc" "iti_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames=true
  tags = {
    Name = "iti_vpc"
  }
}
